--- a/views/login.jade
+++ b/views/login.jade
@@ -4,18 +4,14 @@ append subtitle
   | Login
 
 block content
+  include mixins/forms
   form(action='/login', method='POST')
     fields = form.boundFieldsObj()
     fieldset
       legend Login
+      mixin formErrors(form)
+      mixin field(fields.username)
+      mixin field(fields.password)
       != fields.next
-      .clearfix
-        != fields.username.labelTag()
-        .input
-          != fields.username
-      .clearfix
-        != fields.password.labelTag()
-        .input
-          != fields.password
       .actions
         input.btn.primary(type='submit', value='Login')
