Started speculating on the service interface

--- a/views/base.jade
+++ b/views/base.jade
@@ -20,6 +20,8 @@ html
           ul.nav
             li.nav-home
               a(href='/') Home
+            li.nav-services
+              a(href='/services') Services
           .user
             ul.nav
               if !user.isAuthenticated
