--- a/views/profile.jade
+++ b/views/profile.jade
@@ -3,6 +3,9 @@ extends base
 block subtitle
   | User Profile
 
+block bodyclass
+  bodyclass = 'profile'
+
 block main_content
   .content
     .page-header
