--- a/views/register.jade
+++ b/views/register.jade
@@ -3,8 +3,8 @@ extends hero
 append subtitle
   | Register
 
-append style
-  style
+block bodyclass
+  bodyclass = 'register'
 
 block content
   include mixins/forms
