--- a/views/services.jade
+++ b/views/services.jade
@@ -3,6 +3,9 @@ extends standard
 block subtitle
   | Services
 
+block bodyclass
+  bodyclass = 'services'
+
 block content
   .page-header
     h1 Services
