--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,3 +3,12 @@
   float: right;
   margin-right: -20px;
 }
+
+
+body.home .nav-home,
+body.services .nav-services,
+body.login .nav-login,
+body.register .nav-register {
+  background-color: #000;
+  color: #fff;
+}
