--- a/views/service.jade
+++ b/views/service.jade
@@ -3,6 +3,9 @@ extends standard
 block subtitle
   | #{service.name}
 
+block bodyclass
+  bodyclass = 'services'
+
 block content
   .page-header
     h1 #{service.name} <small>#{service.description}</small>
