Subtitles should append, not override

--- a/views/service.jade
+++ b/views/service.jade
@@ -1,7 +1,7 @@
 extends standard
 
-block subtitle
-  | #{service.name}
+append subtitle
+  | #{service.name} Service
 
 block bodyclass
   bodyclass = 'services'
