--- a/views/404.jade
+++ b/views/404.jade
@@ -1,4 +1,4 @@
-extends base
+extends standard
 
 append subtitle
   | Page Not Found
@@ -6,7 +6,7 @@ append subtitle
 block bodyclass
   bodyclass = 'error404'
 
-block main_content
+block content
   .page-header
     h1 Page Not Found
   p The page you requested could not be found.
